--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "bank-system-simplified",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,5 +10,20 @@
   "dependencies": {
     "jquery": "^3.6.0",
     "moment-js": "^1.1.15"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zourdycodes/simplified-bank-system.git"
+  },
+  "keywords": [
+    "bank-system",
+    "open-source",
+    "education"
+  ],
+  "bugs": {
+    "url": "https://github.com/zourdycodes/simplified-bank-system/issues"
+  },
+  "homepage": "https://github.com/zourdycodes/simplified-bank-system#readme",
+  "description": ""
 }
